k8-manifests/prod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: amalvaasish/test-repo:prod-a7a591208cf957fd8508bf7a3e9c240ff03f37e8
        ports:
        - containerPort: 5000
